# FFmpegPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wison/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: player_core.cpp  player_engine.cpp
app/src/main/cpp/player/: FFmpegPlayer.cpp  FFmpegPlayer.h  LogUtils.h  Player.h  PlayerCallback.cpp  PlayerCallback.h  PlayerCore.cpp  PlayerCore.h
app/src/main/cpp/player/decode/: AudioDecode.cpp  AudioDecode.h  BaseDecode.cpp  BaseDecode.h  Decoder.cpp  Decoder.h  PlayerCore.cpp  PlayerCore.h  VideoDecode.cpp  VideoDecode.h
app/src/main/cpp/player/render/: AudioRender.h  AudioTrackRender.cpp  AudioTrackRender.h  Render.cpp  Render.h  VideoNativeRender.cpp  VideoNativeRender.h  VideoRender.h
app/src/main/java/com/wison/ffmpeg/: DetailActivity.kt  EditActivity.kt  MediaActivity.kt  MediaAdapter.kt  VideoInfo.kt
app/src/main/java/com/wison/ffmpeg/player/: IPlayListener.kt  MediaSurfaceView.kt  MediaTextureView.kt  MediaView.kt  PlayerListenerImpl.kt
app/src/main/res/layout/: activity_detail.xml  activity_edit.xml  activity_media.xml  item_video.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wison/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
